fixed padding on mobile view

--- a/templates/project-article/project-article.css
+++ b/templates/project-article/project-article.css
@@ -16,7 +16,7 @@
 }
 
 .project-article-template .details-sidebar .project-article-inner {
-    padding: 40px 80px 80px;
+    padding: 40px 20px 80px;
 }
 
 .project-article-template .details-sidebar .project-article-inner h1 {
@@ -68,6 +68,10 @@
 @media (width >= 600px) {
     .project-article-template .details-sidebar .project-article-sidebar {
         width: 260px;
+    }
+
+    .project-article-template .details-sidebar .project-article-inner {
+        padding: 40px 80px 80px;
     }
 
     .project-article-template .details-sidebar .project-article-inner .default-content-wrapper {
